Bug 706642: Text extraction; maybe add spaces when prepending lines.

When we prepend a line to another one, if there is a suitable gap
between it and the line we are prepending it to, insert a space.

Logic matches the addition of spaces when simply adding chars.